add AuthenticationService tests